--- a/BackupTool.Postgres/BackupTool.Postgres.csproj
+++ b/BackupTool.Postgres/BackupTool.Postgres.csproj
@@ -5,14 +5,24 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Company>Carlos Casteliano</Company>
+    <Authors>Carlos Casteliano</Authors>
+    <Description>Servico para realizar backup do banco de dados PostgreSql</Description>
+    <AssemblyVersion>1.0.0</AssemblyVersion> <!-- só muda se houver breaking changes -->
+    <FileVersion>1.0.0</FileVersion> <!-- muda a cada build com nova funcionalidade -->
+    <Version>1.0.0</Version> <!-- versão do pacote/publicação -->
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="appsettings.json" />
+    <None Remove="appsettings.production.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="appsettings.Production.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -23,5 +33,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
   </ItemGroup>
+
+
 
 </Project>
